--- a/restaurant_management/homepage.html
+++ b/restaurant_management/homepage.html
@@ -2,6 +2,52 @@
 <html>
     <head>
         <title>Restaurant Menu</title>
+        <style>
+            body {
+            background:#f6f8fa;
+            font-family: 'Segoe UI' , Arial , sans-serif;
+            margin: 0;
+            padding: 0;
+            }
+
+            h1 {
+            text-align: center;
+            color: #2d3748;
+            margin-top: 36px;
+            font-size: 2.2rem;
+            letter-spacing: 1px ;
+            }
+            #menu-list {
+            max-width: 480px;
+            margin: 36px auto 0 auto;
+            padding: 0;
+            list-style: none;
+            }
+            #menu-list li {
+            background: #fff;
+            border-radius: 7px;
+            border: 1px solid #dde1e7 ;
+            margin-bottom: 18px;
+            padding: 18px 22px ;
+            font-size: 1.08rem ;
+            color: #22223b ;
+            box-shadow: 0 2px 6px rgba(160 ,180,220,0.09);
+            display: flex ;
+            justify-content: space-between;
+            align-items: center ;
+            transition: box-shadow 0.2s , border-color 0.2s;
+            }
+            #menu-list li: hover {
+            border-color: #3182ce;
+            box-shadow: 0 4px 18px rgba(49,130,206,0.10);
+            }
+            .price {
+            color: #388e3c;
+            font-weight: bold ;
+            margin-left: 10px;
+            letter-spacing: 0.5px;
+            }
+        </style>
     </head>
     <body>
         <h1>Restaurant Menu</h1>
