--- a/restaurant_management/homepage.html
+++ b/restaurant_management/homepage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Restaurant Menu</title>
+        <title>{{restaurant_name}}Restaurant Menu</title>
         <style>
             body {
             background:#f6f8fa;
@@ -49,7 +49,7 @@
             }
         </style>
     </head>
-    <body>
+    <body><h1>welcome to {{restaurant_name}}!</h1>
         <h1>Restaurant Menu</h1>
         <ul id ="menu-list"></ul>
         <script>
