--- a/restaurant_management/homepage.html
+++ b/restaurant_management/homepage.html
@@ -50,6 +50,7 @@
         </style>
     </head>
     <body><h1>welcome to {{restaurant_name}}!</h1>
+        <div class = "phone">{{phone_number}}</div>
         <h1>Restaurant Menu</h1>
         <ul id ="menu-list"></ul>
         <script>
